# bbstat

./: .gitignore  LICENSE  Pipfile  README.md  setup.cfg
python/bbstat/: __init__.py
python/bbstat/data/: .frame.py.swp  counter.py  frame.py  game.py  lineup.py  reader.py  results.py  roster.py
python/bbstat/stats/: batstats.py  gamestats.py  pitchstats.py
python/bbstat/test/: __init__.py  test_counter.py  test_game.py  test_lineup.py  test_reader.py  test_stats.py
python/test/: __init__.py
