[metadata]
name = bbstat
version = 0.0.4
author = David Adams
author_email = dladams@bnl.gov
description = 'Baseball scoring and stats'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dlaadams/bbstat
project_urls =
    Bug Tracker = https://github.com/dladams/bbstat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent
[options]
packages = find:
package_dir =
    =python
[options.packages.find]
where = python
python_requires = >=3.8

[options.entry_points]
console_scripts =
    bbstat-test-counter=bbstat:main_test_counter
    bbstat-test-lineup=bbstat:main_test_lineup
    bbstat-test-game=bbstat:main_test_game
    bbstat-test-stats=bbstat:main_test_stats
    bbstat-test-reader=bbstat:main_test_reader
